Added a SQLDatabase class that pulls information from the database itself and changed some of the statements to use this information where appropriate